# tps-1773321224-26359-mcp-server

./: .env.example  .gitignore  Dockerfile  README.md  deployment_params.json  docker-compose.yml  mcp_health_check.py  pyproject.toml  pyrightconfig.json  run_local_docker.sh  server.py
.cursor/: tps-1773321224-26359-mcp-server-setup-rules.md
